...
                        <viewControllerLayoutGuide type="bottom" id="2of-ma-TDD"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="ydj-6v-Jkp">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cool application" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oue-eQ-ktW">
                                <rect key="frame" x="25" y="36" width="278" height="49"/>
                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HiX-vW-1w8">
                                <rect key="frame" x="30" y="87" width="72" height="30"/>
                                <state key="normal" title="Go Next"/>
                                <connections>
                                    <segue destination="Enw-De-qDG" kind="show" identifier="present_app_from_welcome" id="5aP-e8-Ose"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
